<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/type_name"
        android:minHeight="48dp"
        android:textSize="16sp"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_eventDetails"
        android:layout_width="384dp"
        android:layout_height="9dp"
        android:layout_margin="16dp"
        android:hint="@string/event_details"
        android:minHeight="18dp"
        android:textSize="5sp"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_name" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/event_details"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_eventDetails"
        tools:ignore="SpeakableTextPresentCheck" />


    <TextView
        android:id="@+id/dateText"
        android:layout_width="149dp"
        android:layout_height="36dp"
        android:layout_marginTop="28dp"
        android:hint="@string/date_details"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@id/dateButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        tools:text="@tools:sample/date/ddmmyy" />

    <Button
        android:id="@+id/dateButton"
        android:layout_width="183dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:text="@string/select_date"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/dateText"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="164dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="156dp"
        android:background="@color/design_default_color_primary_dark"
        android:onClick="submitData"
        android:text="@string/add"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateButton" />

    <Button
        android:id="@+id/viewButton"
        android:layout_width="165dp"
        android:layout_height="57dp"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:onClick="viewData"
        android:text="@string/view"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintHorizontal_bias="0.878"
        app:layout_constraintLeft_toRightOf="@+id/addButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateButton"
        app:layout_constraintVertical_bias="0.462" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="395dp"
        android:layout_height="123dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addButton"
        app:layout_constraintVertical_bias="0.95"
        tools:listitem="@layout/item_event" />

    <Button
        android:id="@+id/Create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewButton" />


</androidx.constraintlayout.widget.ConstraintLayout>